# ml-cicd-pipeline

./: .coverage  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_ISSUES.md  IMPLEMENTATION_NOTES_ISSUE_12.md  IMPLEMENTATION_SUMMARY.md  PROJECT_RULES.md  README.md  coverage.xml  docker-compose.yml  ml-cicd-pipeline.code-workspace  pyproject.toml  requirements.txt
.github/: CI_CD_IMPROVEMENTS.md  DEPLOYMENT_SETUP.md  dependabot.yml
.github/workflows/: ci-lint-test.yml  data-validation.yml  deploy-canary-and-promote.yml  model-training.yml  rollback.yml
ci/policy/: model-gating-rules.md
ci/runbooks/: deploy-runbook.md  incident-response.md
data/processed/: test.csv  train.csv  val.csv
docker/: .dockerignore  Dockerfile  Dockerfile.drift-monitor  download_model.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  LICENSES.md  MODEL_LIFECYCLE.md  MONITORING.md  ROADMAP.md  SET-UP.md  TLS-CONFIGURATION.md  admin-reload-endpoint.md  api_reference.md  mlflow-disaster-recovery-runbook.md  mlflow-high-availability.md
docs/adr/: 001-use-evidently-for-drift-detection.md  002-runtime-model-loading.md  003-schema-versioning-strategy.md
infra/helm/ml-model-chart/: Chart.yaml  SECRET_MANAGEMENT.md  values.yaml
infra/helm/ml-model-chart/templates/: _deployment.yaml  _helpers.tpl  deployment-canary.yaml  deployment-stable.yaml  externalsecret-admin-token.yaml  externalsecret-mlflow-credentials.yaml  hpa-canary.yaml  hpa-stable.yaml  ingress.yaml  networkpolicy.yaml  pdb-canary.yaml  pdb-stable.yaml  pvc.yaml  role.yaml  rolebinding.yaml  secret-admin-token.yaml  secret-mlflow-credentials.yaml  service-canary.yaml  service.yaml  serviceaccount.yaml
infra/monitoring/: drift-monitor-config.yaml  drift-monitor-deployment.yaml  drift-monitor-service.yaml  drift-monitor-servicemonitor.yaml  grafana-datasources.yaml  loki-stack-values.yaml  ml-recording-rules.yaml  ml-service-monitor.yaml  tempo-values.yaml  test-inference-deployment.yaml
model_registry/: model.pkl
notebooks/: 01_data_exploration_preprocessing.ipynb  02_model_training_mlflow.ipynb  03_evaluation_and_smoke_tests.ipynb
scripts/ci/: run_unit_tests.sh
scripts/windows/: deploy-canary.ps1  setup.ps1
src/: resilient_mlflow.py
src/app/: config.py  main.py
src/app/api/: admin.py  explain.py  health.py  metrics.py  predict.py
src/app/api/middleware/: correlation.py
src/data/: __init__.py  feature_statistics.py  validators.py
src/data/validators/: README.md  __init__.py  __main__.py  cli.py
src/drift_monitoring/: __init__.py  config.py  monitor.py  service.py
src/models/: infer.py  manager.py  trainer.py
src/utils/: drift.py  logging.py  prediction_cache.py  prediction_history.py  rwlock.py  telemetry.py  tracing.py
tests/: README.md  conftest.py  test_data_pipeline.py
tests/integration/: __init__.py  test_api_endpoints.py  test_error_scenarios.py  test_loki_integration.py  test_mlflow_integration.py
tests/load/: README.md  __init__.py  locustfile.py  test_scalability.py
tests/security/: __init__.py  test_security.py
tests/unit/: test_admin_reload.py  test_config.py  test_correlation_middleware.py  test_data_validators.py  test_drift_monitor.py  test_drift_service.py  test_drift_utils.py  test_error_scenarios.py  test_explain.py  test_feature_statistics.py  test_health_with_reload.py  test_infer.py  test_logging.py  test_main.py  test_model_manager.py  test_predict_validation.py  test_prometheus_middleware.py  test_resilient_mlflow.py  test_telemetry.py  test_trainer.py
