[tool.poetry]
name = "ml-cicd-pipeline"
version = "0.1.0"
description = "CI/CD pipeline for ML models. Senior-level scaffold. Windows 11 friendly."
authors = ["Dani <dani@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^2.3"
slowapi = "^0.1.9"
scikit-learn = "^1.3"
pandas = "^2.0"
mlflow = "^2.7"
prometheus-client = "^0.17"
evidently = "^0.7"
fsspec = "^2024.6"
s3fs = "^2024.6"
requests = "^2.32"
skl2onnx = "^1.16"
onnxruntime = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-xdist = "^3.5"
ruff = "^0.12.0"
mypy = "^1.4"
pre-commit = "^3.3"
bandit = {extras = ["toml"], version = "^1.7"}
safety = "^3.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
