[tool.poetry]
name = "ml-cicd-pipeline"
version = "0.1.0"
description = "CI/CD pipeline for ML models. Senior-level scaffold. Windows 11 friendly."
authors = ["Dani <dani@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^2.3"
slowapi = "^0.1.9"
scikit-learn = "^1.3"
pandas = "^2.0"
mlflow = "^2.7"
prometheus-client = "^0.17"
evidently = "^0.7"
fsspec = "^2024.6"
s3fs = "^2024.6"
requests = "^2.32"
skl2onnx = "^1.16"
onnxruntime = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-xdist = "^3.5"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
locust = "^2.15"
httpx = "^0.24"
ruff = "^0.12.0"
mypy = "^1.4"
pre-commit = "^3.3"
bandit = {extras = ["toml"], version = "^1.7"}
safety = "^3.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "-n=auto",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "load: marks tests as load tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
