[tool.poetry]
name = "ml-cicd-pipeline"
version = "0.1.0"
description = "CI/CD pipeline for ML models. Senior-level scaffold. Windows 11 friendly."
authors = ["Dani <dani@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.2"
uvicorn = { extras = ["standard"], version = "^0.38.0" }
pydantic = "^2.3"
pydantic-settings = "^2.0"
slowapi = "^0.1.9"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
mlflow = "^3.6.0"
prometheus-client = "^0.23.1"
python-json-logger = "^4.0.0"
joblib = "^1.5.2"
evidently = "^0.7.15"
fsspec = "^2024.6"
s3fs = "^2024.6"
requests = "^2.32"
skl2onnx = "^1.16"
onnxruntime = "^1.16"
opentelemetry-distro = { extras = ["otlp"], version = "^0.49b0" }
opentelemetry-instrumentation-fastapi = "^0.49b0"
opentelemetry-exporter-otlp-proto-grpc = "^1.28.0"
opentelemetry-exporter-otlp-proto-http = "^1.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-xdist = "^3.5"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
pytest-mock = "^3.12"
locust = "^2.17"
ruff = "^0.12.0"
mypy = "^1.4"
pre-commit = "^3.3"
bandit = { extras = ["toml"], version = "^1.7" }
safety = "^3.0"
pylint = "^3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["onnxruntime.*", "evidently.*", "mlflow.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "BLE", # flake8-blind-except
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # unused imports
"tests/**/*.py" = ["ARG", "S101"] # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "load: Load tests",
    "security: Security tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
